--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,19 @@
     }
 
     p {
-        @apply text-sm text-default-text
+        @apply text-sm text-default-text;
+    }
+
+    form {
+        @apply rounded-xl p-4;
+    }
+
+    label {
+        @apply mt-4;
+    }
+
+    input, select, textarea {
+        @apply m-1 rounded bg-card p-1 text-black;
     }
 }
 
